<resources>
    <string name="app_name">CP670-Project</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="login_hint_text">(Hint: You can log in with admin/admin)</string>
    <string name="height_text">183.0 cm</string>
    <string name="bday_string">Dec.25.1991</string>
    <string name="gender_string">Gender</string>
    <string name="weight_string">251.0 lb</string>

    <string name="dashboard">Dashboard</string>
    <string name="my_profile">My profile</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>

    <string name="mealsText">Meals</string>
    <string name="exercisesText">Exercises</string>

    <string name="welcome">Hello</string>

    <string name="meal_name">Meal Name</string>
    <string name="calories_in">Calories In</string>

    <string name="exercise_name">Exercise Name</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance</string>
    <string name="length_of_time">Length Of Time</string>
    <string name="calories_out">Calories Out</string>

    <string name="save_button">Save</string>

    <string name="mealSuccessText">Meal Successfully Saved</string>
    <string name="mealErrorText">Error: Calories must be an integer</string>

    <string name="exerciseSuccessText">Exercise Successfully Saved</string>
    <string name="exerciseErrorText">Error: Weight, Distance, Length of Time must be doubles. Calories Out must be Integer.</string>
    <string name="repetitions">5</string>
    <string name="sets">3</string>
    <string name="image">0</string>
    <string name="year">Year</string>
    <string name="month_text">Month</string>
    <string name="day_text">Day</string>
    <string name="some_necessary_details">Some Necessary details</string>
    <string name="Meal">Burger</string>
    <string name="user">User</string>
</resources>
