<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10172C"
    android:rotation="0">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Profile Fragment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="176dp"
        app:auto_cycle="true"
        app:corner_radius="5"
        app:delay="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:period="1000"
        app:placeholder="@drawable/logo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/user_profile_icon"
        app:civ_border_color="#FFA000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Full_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Username"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/email_address"
        android:layout_width="187dp"
        android:layout_height="21dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/search_bg"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="gigioshobe21@fgmail.com"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/Full_Name"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="@+id/Full_Name"
        app:layout_constraintTop_toBottomOf="@+id/Full_Name"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/Gender_buttn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:backgroundTint="#222121"
        android:text="@string/gender_string"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/age_btn"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <Button
        android:id="@+id/age_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#222121"
        android:text="@string/bday_string"
        android:textColor="@color/white"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/Gender_buttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Gender_buttn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/height_buttn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="#222121"
        android:text="@string/height_text"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/weight_btn"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gender_buttn" />

    <Button
        android:id="@+id/weight_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:backgroundTint="#222121"
        android:text="@string/weight_string"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/height_buttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/height_buttn" />

</androidx.constraintlayout.widget.ConstraintLayout>